Remove unneccessary capture on split
This has the effect of inserting the separator into @termcap_path but it
is never used, and infact it is later removed via the last line in the
sub:

    return grep { defined $_ && -f $_ } @termcap_path;

--- a/AUTHORS
+++ b/AUTHORS
@@ -327,6 +327,7 @@ David D. Kilzer                <ddkilzer@lubricants-oil.com>
 David Denholm                  <denholm@conmat.phys.soton.ac.uk>
 David Dyck                     <david.dyck@fluke.com>
 David F. Haertig               <dfh@dwroll.lucent.com>
+David Farrell                  <davidnmfarrell@gmail.com>
 David Favor                    <david@davidfavor.com>
 David Feldman                  <david.feldman@tudor.com>
 David Fifield                  <david@bamsoftware.com>
