--- a/AUTHORS
+++ b/AUTHORS
@@ -31,6 +31,7 @@ Abir Viqar                     <abiviq@hushmail.com>
 Achim Bohnet                   <ach@mpe.mpg.de>
 Achim Gratz                    <achim.gratz@stromeko.de>
 Adam Flott                     <adam@npjh.com>
+Adam Hartley                   <git@ahartley.com>
 Adam Kennedy                   <adam@ali.as>
 Adam Krolnik                   <adamk@gypsy.cyrix.com>
 Adam Milner                    <carmiac@nmt.edu>
