--- a/pod/perlcall.pod
+++ b/pod/perlcall.pod
@@ -129,6 +129,8 @@ with a bit mask of any combination of the other G_* symbols defined below.
 
 =head2  G_VOID
 
+=for apidoc AmnUh||G_VOID
+
 Calls the Perl subroutine in a void context.
 
 This flag has 2 effects:
@@ -153,6 +155,8 @@ be 0.
 
 
 =head2  G_SCALAR
+
+=for apidoc AmnUh||G_SCALAR
 
 Calls the Perl subroutine in a scalar context.  This is the default
 context flag setting for all the I<call_*> functions.
@@ -194,6 +198,8 @@ Context> shows an example of this behavior.
 
 =head2 G_ARRAY
 
+=for apidoc AmnUh||G_ARRAY
+
 Calls the Perl subroutine in a list context.
 
 As with G_SCALAR, this flag has 2 effects:
@@ -225,6 +231,8 @@ Perl stack.
 
 =head2 G_DISCARD
 
+=for apidoc AmnUh||G_DISCARD
+
 By default, the I<call_*> functions place the items returned from
 by the Perl subroutine on the stack.  If you are not interested in
 these items, then setting this flag will make Perl get rid of them
@@ -240,6 +248,8 @@ Dispose of Temporaries> discusses the specific circumstances where you
 can ignore the problem and let Perl deal with it for you.
 
 =head2 G_NOARGS
+
+=for apidoc AmnUh||G_NOARGS
 
 Whenever a Perl subroutine is called using one of the I<call_*>
 functions, it is assumed by default that parameters are to be passed to
@@ -276,6 +286,8 @@ belongs to C<joe>.
 
 
 =head2 G_EVAL
+
+=for apidoc AmnUh||G_EVAL
 
 It is possible for the Perl subroutine you are calling to terminate
 abnormally, e.g., by calling I<die> explicitly or by not actually
@@ -320,6 +332,8 @@ from the stack.
 See L</Using G_EVAL> for details on using G_EVAL.
 
 =head2 G_KEEPERR
+
+=for apidoc AmnUh||G_KEEPERR
 
 Using the G_EVAL flag described above will always set C<$@>: clearing
 it if there was no error, and setting it to describe the error if there
